# coom

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  checkpointing.py  dataloader.py  distributed_utils.py  lossfunc.py  main.py  model_provider.py  pretrain_eka.py  pyproject.toml  requirements.txt  setup.py
configs/: logger_config.yaml  main_config.yaml
configs/base_configs/: dataLoader_config.yaml  dataModule_config.yaml  main_config.yaml  trainer_config.yaml
configs/experiment_0/: base_model_config.yaml  callback_config.yaml  dataLoader_config.yaml  dataModule_config.yaml  data_paths_config.yaml  logger_config.yaml  main_config.yaml  msc_config.yaml  msc_config_aistore.yaml  msc_config_s3.yaml  optimizer_config.yaml  profiler_config.yaml  trainer_config.yaml
coom/: train.py
coom/config_classes/: DeepSeekV3Config.py  EKA_DeepSeekV3Config.py  __init__.py  eka_config.py
coom/configs/: base_model_config.yaml  optimizer_config.yaml  trainer_config.yaml
coom/data_module/: __init__.py  eka_datamodule.py  load_and_validate_paths.py
coom/model/: EKADeepSeekV3Model.py  EKA_DeepSeekV3Model.py  __init__.py  eka_model.py
coom/optimizers/: __init__.py  muon.py
coom/profiler/: __init__.py  eka_profiler.py  profiler.py
coom/streaming_datamodule/: __init__.py  eka_datamodule.py
coom/training/: arguments.py  async_utils.py  initialize.py  training.py  utils.py  (+1 more)
tests/: test_trainer.py  test_transformer.py
tools/: preprocess_data.py  preprocess_data_nemo_copy.py
training/: checkpointing.py  global_vars.py  initialize.py  training.py  utils.py
(+20 files in other folders)
