[project]
name = "coom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "pytest>=8.3.4",
    "torch>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "coom",
    "pytest>=8.3.4",
]

[tool.uv.sources]
coom = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]
